codex-rs/tui/src/snapshots/darwin_code_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: tui/src/app.rs
expression: rendered
---
╭─────────────────────────────────────────────╮
│ >_ OpenAI DarwinCode (v<VERSION>)           │
│                                             │
│ model:     gpt-5.4 xhigh   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯
